Adding null checks

--- a/src/app/component/add-post/add-post.component.html
+++ b/src/app/component/add-post/add-post.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h3>Add New Post</h3>
   <div class="post-container">
     <div class="form-group">
       <label for="title">Title:</label>
